<resources>
    <string name="app_name" translatable="false">Money Mind</string>
    <string name="welcome_morning">Buongiorno, %1$s!</string>
    <string name="welcome_afternoon">Buon pomeriggio, %1$s!</string>
    <string name="welcome_evening">Buonasera, %1$s!</string>
    <string name="settings">Impostazioni</string>
    <string name="delete_transaction_confirmation_title">Elimina Movimento</string>
    <string name="delete_transaction_confirmation_message">Sei sicuro di voler eliminare i movimenti selezionati?</string>
    <string name="delete_budget_confirmation_title">Elimina Budget</string>
    <string name="delete_budget_confirmation_message">Sei sicuro di voler eliminare i budget selezionati?</string>
    <string name="delete_goal_confirmation_title">Elimina Obiettivo</string>
    <string name="delete_goal_confirmation_message">Sei sicuro di voler eliminare gli obiettivi selezionati?</string>
    <string name="add_transaction_title">Aggiungi Movimento</string>
    <string name="edit_transaction_title">Modifica Movimento</string>
    <string name="add_budget_title">Aggiungi Budget</string>
    <string name="edit_budget_title">Modifica Budget</string>
    <string name="add_goal_title">Aggiungi Obiettivo</string>
    <string name="edit_goal_title">Modifica Obiettivo</string>
    <string name="budget_under_control">Stai gestendo bene il tuo budget! Hai speso %1$s su %2$s</string>
    <string name="budget_warning">Attenzione! Hai speso %1$s su %2$s (oltre il 75%% del tuo budget)</string>
    <string name="budget_exceeded">Hai superato il budget! Hai speso %1$s su %2$s</string>
    <string name="budget_not_used">Non hai ancora usato il tuo budget di %1$s</string>
    <string name="savings_in_progress">Stai risparmiando con costanza! Hai messo da parte %1$s su %2$s</string>
    <string name="savings_almost_there">Sei vicino al tuo obiettivo! Hai risparmiato %1$s su %2$s</string>
    <string name="savings_goal_reached">Complimenti! Hai raggiunto il tuo obiettivo di risparmio con %1$s su %2$s</string>
    <string name="savings_no_progress">Non hai ancora iniziato a risparmiare. Il tuo obiettivo è %1$s</string>
    <string name="balance_excellent">Ottimo lavoro! Non hai spese o il tuo bilancio è molto positivo</string>
    <string name="balance_good">Buon lavoro! Le tue entrate superano le spese</string>
    <string name="balance_neutral">Il tuo bilancio è quasi in equilibrio</string>
    <string name="balance_slightly_negative">Attenzione! Hai speso più di quanto hai guadagnato, ma la situazione è sotto controllo</string>
    <string name="balance_critical">Bilancio a rischio! Le tue spese superano di molto le tue entrate</string>
    <string name="balance_no_activity">Nessuna attività finanziaria per questo mese</string>
    <string name="date_range" translatable="false">%1$s - %2$s</string>
    <string name="input_transaction_name_hint">Nome</string>
    <string name="input_transaction_amount_hint">Importo</string>
    <string name="input_transaction_converted_amount_hint">Importo Convertito</string>
    <string name="input_date_hint">Data</string>
    <string name="input_transaction_currency_hint">Valuta</string>
    <string name="input_transaction_currency_disclaimer">Disclaimer valuta</string>
    <string name="add_transaction_currency_disclaimer">L\'importo verrà convertito nella tua valuta predefinita (EUR) sfruttando il cambio alla data inserita</string>
    <string name="input_transaction_type_hint">Tipologia</string>
    <string name="input_transaction_notes_hint">Note</string>
    <string name="income">Entrata</string>
    <string name="expense">Uscita</string>
    <string name="confirm">Conferma</string>
    <string name="cancel">Annulla</string>
    <plurals name="selection_count">
        <item quantity="one">%d elemento selezionato</item>
        <item quantity="other">%d elementi selezionati</item>
    </plurals>
    <string name="settings_theme_title">Tema</string>
    <string name="settings_theme_light">Chiaro</string>
    <string name="settings_theme_dark">Scuro</string>
    <string name="settings_theme_auto">Auto</string>
    <string name="settings_language_title">Lingua</string>
    <string name="settings_language_it" translatable="false">Italiano</string>
    <string name="settings_language_en" translatable="false">English</string>
    <string name="settings_notifications">Notifiche</string>
    <string name="settings_logout">Esci</string>
    <string name="settings_version">Versione 1.0</string>
    <string name="category_hint">Categoria</string>
    <string name="recurring_movement_checkbox">Movimento ricorrente</string>
    <string name="recurrence_type_hint">Tipologia ricorrenza</string>
    <string name="recurrence_interval_hint">Intervallo ricorrenza</string>
    <string name="input_end_date_hint">Data fine ricorrenza</string>
    <string name="daily">Giornaliera</string>
    <string name="weekly">Settimanale</string>
    <string name="monthly">Mensile</string>
    <string name="yearly">Annuale</string>
    <string name="salva">Salva</string>
    <string name="no_movements">Nessun movimento registrato</string>
    <string name="no_movements_hint">Aggiungi un movimento per iniziare a tracciare le tue finanze!</string>
    <string name="no_budgets">Nessun budget salvato</string>
    <string name="no_budgets_hint">Aggiungi un budget per monitorare le tue spese e raggiungere i tuoi obiettivi finanziari</string>
    <string name="no_goals">Nessun obiettivo creato</string>
    <string name="no_goals_hint">Crea un obiettivo per risparmiare in modo efficace e raggiungere i tuoi traguardi finanziari</string>
    <string name="disclaimer_text">Questa app utilizza i tassi di cambio forniti dalla <b>Banca Centrale Europea (BCE)</b>,
        che vengono aggiornati solo nei giorni feriali dopo le <b>16:00 CET</b>. Se selezioni una data
        che cade nel weekend, in un giorno festivo o prima dell\'aggiornamento giornaliero,
        l\'app utilizzerà automaticamente il <b>tasso più recente disponibile</b>
    </string>
    <string name="aggiungi_movimento">Aggiungi movimento</string>
    <string name="app_claim">Gestisci le tue finanze in modo intelligente</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login">Accedi</string>
    <string name="register">Registrati</string>
    <string name="compile_all_field">Compila tutti i campi per continuare</string>
    <string name="name">Nome</string>
    <string name="password_confirm">Conferma Password</string>
    <string name="already_got_account">Hai già un account? Accedi</string>
    <string name="add_transaction">Aggiungi movimento</string>
    <string name="category_icon">Icona Categoria</string>
    <string name="goal_name">Nome Goal</string>
    <string name="category">Categoria</string>
    <string name="transaction_name">Nome Movimento</string>
    <string name="type_icon">tipo_icona</string>
    <string name="add_goal">Aggiungi goal</string>
    <string name="add_budget">Aggiungi budget</string>
    <string name="goal_amount">Importo Obiettivo</string>
    <string name="saved_amount">Importo Risparmiato</string>
    <string name="begin_date">Data di Inizio</string>
    <string name="end_date">Data di Fine</string>
    <string name="budget_name">Nome Budget</string>
    <string name="amount">Importo</string>
    <string name="january_2025">Gennaio 2025</string>
    <string name="not_available">Non disponibile</string>
    <string name="last_movements">Ultimi movimenti</string>
    <string name="goals">Obiettivi</string>
    <string name="budgets">Budget</string>
    <string name="movements">Movimenti</string>
    <string name="recurring_movements">Movimenti ricorrenti</string>
    <string name="home" translatable="false">Home</string>
    <string name="currency_converter">Convertitore Valuta</string>
    <string name="delete">Elimina</string>
    <string name="invalid_credentials">Inserire credenziali valide</string>
    <string name="completed_registration">Registrazione completata! Effettua il login.</string>
    <string name="field_error">Compila tutti i campi</string>
    <string name="password_error">Le password non coincidono</string>
    <string name="password_length">La password deve avere almeno 6 caratteri</string>
    <string name="empty_name_error">Il campo relativo al nome non può essere vuoto</string>
    <string name="empty_amount_error">Il campo relativo all\'importo non può essere vuoto</string>
    <string name="empty_category_error">Il campo relativo alla categoria non può essere vuoto</string>
    <string name="empty_startdate_error">Il campo relativo alla data di inizio non può essere vuoto</string>
    <string name="empty_enddate_error">Il campo relativo alla data di fine non può essere vuoto</string>
    <string name="empty_date_error">Il campo relativo alla data non può essere vuoto</string>
    <string name="empty_targetamount_error">Il campo relativo all\'importo target non può essere vuoto</string>
    <string name="empty_savedamount_error">Il campo relativo all\'importo risparmiato non può essere vuoto</string>
    <string name="empty_currency_error">Il campo relativo alla valuta non può essere vuoto</string>
    <string name="empty_type_error">Il campo relativo al tipo di movimento non può essere vuoto</string>
    <string name="empty_recurrence_error">Il campo relativo alla ricorrenza non può essere vuoto</string>
    <string name="empty_recurrence_interval_error">Il campo relativo all\' intervallo della ricorrenza non può essere vuoto</string>
    <string name="invalid_amounts_error">L\'importo target deve essere maggiore dell\'importo risparmiato</string>
    <string name="error_field_required">Il campo non può essere vuoto</string>
    <string name="error_name_invalid">Il nome può contenere solo lettere</string>
    <string name="error_email_invalid">Inserisci un\'email valida (es. nome@esempio.com)</string>
    <string name="error_password_invalid">La password deve avere almeno 6 caratteri, una maiuscola, una minuscola, un numero e un carattere speciale</string>
    <string name="error_confirm_password_invalid">Le password non coincidono</string>
    <string name="invalid_name_error">Il nome inserito deve contenere solo lettere, numeri o spazi</string>
    <string name="error_fetching_exchange_rates">Nessun tasso di cambio trovato per la data selezionata</string>
    <string name="currency_eur">Euro</string>
    <string name="currency_aud">Dollaro australiano</string>
    <string name="currency_bgn">Lev bulgaro</string>
    <string name="currency_brl">Real brasiliano</string>
    <string name="currency_cad">Dollaro canadese</string>
    <string name="currency_chf">Franco svizzero</string>
    <string name="currency_cny">Yuan cinese</string>
    <string name="currency_czk">Corona ceca</string>
    <string name="currency_dkk">Corona danese</string>
    <string name="currency_gbp">Sterlina britannica</string>
    <string name="currency_hkd">Dollaro di Hong Kong</string>
    <string name="currency_hrk">Kuna croata</string>
    <string name="currency_huf">Fiorino ungherese</string>
    <string name="currency_idr">Rupia indonesiana</string>
    <string name="currency_ils">Nuovo siclo israeliano</string>
    <string name="currency_inr">Rupia indiana</string>
    <string name="currency_isk">Corona islandese</string>
    <string name="currency_jpy">Yen giapponese</string>
    <string name="currency_krw">Won sudcoreano</string>
    <string name="currency_mxn">Peso messicano</string>
    <string name="currency_myr">Ringgit malese</string>
    <string name="currency_nok">Corona norvegese</string>
    <string name="currency_nzd">Dollaro neozelandese</string>
    <string name="currency_php">Peso filippino</string>
    <string name="currency_pln">Zloty polacco</string>
    <string name="currency_ron">Leu rumeno</string>
</resources>